# tamagokill

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  IDEAS.md  LICENSE  README.md  compose.dev.yaml  compose.yaml  flake.nix  git-conventional-commits.yaml  setup.sh  shell.nix  startup.sh  tamagokill.drawio
.github/workflows/: check-code.yml  check-commit-message.yml  check-pull-requests.yml  check.yml
adr/: 2024-06-13-ADR-1-adoption-of-architectural-decision-record.md
api/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev
api/config/: default.yaml
api/migration/src/: lib.rs  m20240721_000001_create_user_table.rs  m20240721_000002_create_tamago_table.rs
api/src/: main.rs
api/src/entities/: mod.rs  prelude.rs  tamago.rs  user.rs
docs/: Dockerfile  Dockerfile.dev  docusaurus.config.ts  package-lock.json  package.json
setup/: main.sh  setup.ascii
setup/git-hooks/: commit-msg
startup/: main.sh  startup.ascii  tamagokill.ascii
startup/git-hooks/: commit-msg
web/: Dockerfile  Dockerfile.dev  package-lock.json  package.json
web/src/routes/: +page.svelte
